# cppqranx-core

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
example-test/: CMakeLists.txt
example-test/libs/qranxcore/: libqranxcore.so.1.0  qranxcore.h
example-test/src/: main.cpp
examples/: main.cpp
src/: qranxcore.cpp
